# ipython_copy

./: .copier-answers.yml  README.md  TODO  pyproject.toml
.github/workflows/: build_and_publish_text_matrix.yml
ipython_copy/: clip_var.py  ipython_clipboard.py
tests/: test_import.py
